feat: change url and add cookie auth
