# controller/repository_ctl.go
@@ -3,9 +3,18 @@ package controller
 import (
 	"context"
 	"errors"
+	"io"
 	"net/http"
 	"regexp"
 	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
+
+	"github.com/jiaozifs/jiaozifs/utils/hash"
+
+	"github.com/jiaozifs/jiaozifs/versionmgr"
+
+	"github.com/jiaozifs/jiaozifs/auth"
 
 	"github.com/jiaozifs/jiaozifs/api"
 	"github.com/jiaozifs/jiaozifs/models"
@@ -40,8 +49,8 @@ type RepositoryController struct {
 	Repo models.IRepo
 }
 
-func (repositoryCtl RepositoryController) ListRepository(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request, userName string) {
-	user, err := repositoryCtl.Repo.UserRepo().Get(ctx, models.NewGetUserParams().SetName(userName))
+func (repositoryCtl RepositoryController) ListRepository(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request) {
+	user, err := auth.GetUser(ctx)
 	if err != nil {
 		w.Error(err)
 		return
@@ -57,22 +66,22 @@ func (repositoryCtl RepositoryController) ListRepository(ctx context.Context, w 
 	w.JSON(repositories)
 }
 
-func (repositoryCtl RepositoryController) CreateRepository(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request, userName string, params api.CreateRepositoryParams) {
-	err := CheckRepositoryName(params.Name)
+func (repositoryCtl RepositoryController) CreateRepository(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request, body api.CreateRepositoryJSONRequestBody) {
+	err := CheckRepositoryName(body.Name)
 	if err != nil {
 		w.BadRequest(err.Error())
 		return
 	}
 
-	user, err := repositoryCtl.Repo.UserRepo().Get(ctx, models.NewGetUserParams().SetName(userName))
+	user, err := auth.GetUser(ctx)
 	if err != nil {
 		w.Error(err)
 		return
 	}
 
 	repository := &models.Repository{
-		Name:        params.Name,
-		Description: params.Description,
+		Name:        body.Name,
+		Description: body.Description,
 		HEAD:        "main",
 		CreatorID:   user.ID,
 		CreatedAt:   time.Now(),
@@ -149,4 +158,88 @@ func (repositoryCtl RepositoryController) UpdateRepository(ctx context.Context, 
 		w.Error(err)
 		return
 	}
+}
+
+func (repositoryCtl RepositoryController) GetCommitsInRepository(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request, userName string, repositoryName string, params api.GetCommitsInRepositoryParams) {
+	user, err := repositoryCtl.Repo.UserRepo().Get(ctx, models.NewGetUserParams().SetName(userName))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	repo, err := repositoryCtl.Repo.RepositoryRepo().Get(ctx, &models.GetRepoParams{
+		CreatorID: user.ID,
+		Name:      utils.String(repositoryName),
+	})
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	refName := repo.HEAD
+	if params.RefName != nil {
+		refName = *params.RefName
+	}
+	ref, err := repositoryCtl.Repo.RefRepo().Get(ctx, models.NewGetRefParams().SetName(refName))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	commit, err := repositoryCtl.Repo.ObjectRepo().Commit(ctx, ref.CommitHash)
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	var commits []api.Commit
+	iter := versionmgr.NewCommitPreorderIter(versionmgr.NewCommitNode(ctx, commit, repositoryCtl.Repo.ObjectRepo()), nil, nil)
+	for {
+		commit, err := iter.Next()
+		if err == nil {
+			modelCommit := commit.Commit()
+			commits = append(commits, api.Commit{
+				Author: api.Signature{
+					Email: openapi_types.Email(modelCommit.Author.Email),
+					Name:  modelCommit.Author.Name,
+					When:  modelCommit.Author.When,
+				},
+				Committer: api.Signature{
+					Email: openapi_types.Email(modelCommit.Committer.Email),
+					Name:  modelCommit.Committer.Name,
+					When:  modelCommit.Committer.When,
+				},
+				CreatedAt:    modelCommit.CreatedAt,
+				Hash:         modelCommit.Hash.Hex(),
+				MergeTag:     modelCommit.MergeTag,
+				Message:      modelCommit.Message,
+				ParentHashes: hash.HexArrayOfHashes(modelCommit.ParentHashes...),
+				TreeHash:     modelCommit.TreeHash.Hex(),
+				Type:         int8(modelCommit.Type),
+				UpdatedAt:    modelCommit.UpdatedAt,
+			})
+			continue
+		}
+		if err == io.EOF {
+			break
+		}
+		w.Error(err)
+		return
+	}
+	w.JSON(commits)
+}
+
+func (repositoryCtl RepositoryController) ListRepositories(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request, userName string) {
+	user, err := repositoryCtl.Repo.UserRepo().Get(ctx, models.NewGetUserParams().SetName(userName))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+
+	repos, err := repositoryCtl.Repo.RepositoryRepo().List(ctx, models.NewListRepoParams().SetCreatorID(user.ID))
+	if err != nil {
+		w.Error(err)
+		return
+	}
+	w.JSON(repos)
 }
