# controller/user_ctl.go
@@ -2,7 +2,12 @@ package controller
 
 import (
 	"context"
+	"fmt"
 	"net/http"
+
+	logging "github.com/ipfs/go-log/v2"
+
+	"github.com/gorilla/sessions"
 
 	"github.com/jiaozifs/jiaozifs/config"
 	"github.com/jiaozifs/jiaozifs/models"
@@ -12,6 +17,8 @@ import (
 	"go.uber.org/fx"
 )
 
+var userCtlLog = logging.Logger("user_ctl")
+
 const (
 	AuthHeader = "Authorization"
 )
@@ -19,11 +26,12 @@ const (
 type UserController struct {
 	fx.In
 
-	Repo   models.IRepo
-	Config *config.Config
+	SessionStore sessions.Store
+	Repo         models.IRepo
+	Config       *config.AuthConfig
 }
 
-func (userCtl UserController) Login(ctx context.Context, w *api.JiaozifsResponse, _ *http.Request, body api.LoginJSONRequestBody) {
+func (userCtl UserController) Login(ctx context.Context, w *api.JiaozifsResponse, r *http.Request, body api.LoginJSONRequestBody) {
 	login := auth.Login{
 		Username: body.Username,
 		Password: body.Password,
@@ -33,6 +41,15 @@ func (userCtl UserController) Login(ctx context.Context, w *api.JiaozifsResponse
 	authToken, err := login.Login(ctx, userCtl.Repo.UserRepo(), userCtl.Config)
 	if err != nil {
 		w.Error(err)
+		return
+	}
+
+	internalAuthSession, _ := userCtl.SessionStore.Get(r, auth.InternalAuthSessionName)
+	internalAuthSession.Values[auth.TokenSessionKeyName] = authToken.Token
+	err = userCtl.SessionStore.Save(r, w, internalAuthSession)
+	if err != nil {
+		userCtlLog.Errorf("Failed to save internal auth session %v", err)
+		w.Code(http.StatusInternalServerError)
 		return
 	}
 	w.JSON(authToken)
@@ -56,6 +73,12 @@ func (userCtl UserController) Register(ctx context.Context, w *api.JiaozifsRespo
 
 func (userCtl UserController) GetUserInfo(ctx context.Context, w *api.JiaozifsResponse, r *http.Request) {
 	// Get token from Header
+	user, err := auth.GetUser(ctx)
+	if err != nil {
+		w.Error(err)
+		return
+	}
+	fmt.Println(user)
 	tokenString := r.Header.Get(AuthHeader)
 	userInfo := &auth.UserInfo{Token: tokenString}
 
@@ -67,4 +90,19 @@ func (userCtl UserController) GetUserInfo(ctx context.Context, w *api.JiaozifsRe
 	}
 
 	w.JSON(usrInfo)
+}
+
+func (userCtl UserController) Logout(_ context.Context, w *api.JiaozifsResponse, r *http.Request) {
+	session, err := userCtl.SessionStore.Get(r, auth.InternalAuthSessionName)
+	if err != nil {
+		w.Error(err)
+		return
+	}
+	session.Options.MaxAge = -1
+	if session.Save(r, w) != nil {
+		userCtlLog.Errorf("Failed to save internal auth session %v", err)
+		w.Error(err)
+		return
+	}
+	http.Redirect(w, r, "/", http.StatusTemporaryRedirect)
 }
